k8s/result-deploy+service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result-container
        image: bacon21/result-im:latest
        ports:
          - containerPort: 80
  apiVersion: v1
  kind: Service
  metadata:
    name: result-service
  spec:
    selector:
      app: result
    ports:
      - port: 80
        targetPort: 80
